[tool.poetry]
name = "flow-py-sdk"
version = "0.0.0"
description = "A python SKD for the flow blockchain"
authors = ["Janez Podhostnik <janez.podhostnik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/janezpodhostnik/flow-py-sdk"

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
grpcio-tools = "^1.33.2"
ecdsa = "^0.16.1"
rlp = "^2.0.1"
grpclib = "^0.4.1"
poetry-dynamic-versioning = "^0.12.6"

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0"
toml = "^0.10.2"
black = "^21.4b2"
pytest = "^6.2.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
examples = 'examples.main:run'
