[tool.poetry]
name = "flow-py-sdk"
version = "0.0.0"
description = "A python SKD for the flow blockchain"
authors = ["Janez Podhostnik <janez.podhostnik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/janezpodhostnik/flow-py-sdk"

[tool.poetry.dependencies]
python = "^3.11"
betterproto = {extras = ["compiler"], version = "v2.0.0-beta5"}
grpcio-tools = "^1.51"
ecdsa = "^v0.18"
rlp = "^3.0"
grpclib = "^0.4"

[tool.poetry.dev-dependencies]
coloredlogs = "^15.0"
toml = "^0.10"
black = "^23.1"
pytest = "^7.2"
mkdocs = "^1.4"
mkdocs-material = "^9.0"
mkdocstrings = "^0.20"
coverage = "^7.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
examples = 'examples.main:run'
